--- a/job/templates/job/job_list.html
+++ b/job/templates/job/job_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap4 %}
 {%block body%}
 
@@ -51,7 +52,7 @@
               <div class="single_jobs white-bg d-flex justify-content-between">
                 <div class="jobs_left d-flex align-items-center">
                   <div class="thumb">
-                    <img src="img/svg_icon/1.svg" alt="" />
+                    <img src="{% static 'img/svg_icon/1.svg' %}" alt="image" />
                   </div>
 
                   <div class="jobs_conetent">
