--- a/templates/base.html
+++ b/templates/base.html
@@ -216,7 +216,7 @@
             <div class="row">
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Design & Creative</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Marketing</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Telemarketing</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Software & Web</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Administration</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Teaching & Education</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Engineering</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
                     <div class="single_catagory">
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h4>Garments / Textile</h4>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -535,7 +535,7 @@
                         <div class="thumb">
                             <img src="{% static 'img/svg_icon/5.svg' %}" alt="">
                         </div>
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h3>Snack Studio</h3>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -546,7 +546,7 @@
                         <div class="thumb">
                             <img src="{% static 'img/svg_icon/4.svg' %}" alt="">
                         </div>
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h3>Snack Studio</h3>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -557,7 +557,7 @@
                         <div class="thumb">
                             <img src="{% static 'img/svg_icon/3.svg' %}" alt="">
                         </div>
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h3>Snack Studio</h3>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -568,7 +568,7 @@
                         <div class="thumb">
                             <img src="{% static 'img/svg_icon/1.svg' %}" alt="">
                         </div>
-                        <a href="jobs.html">
+                        <a href="{% url 'jobs:job_list' %}">
                             <h3>Snack Studio</h3>
                         </a>
                         <p> <span>50</span> Available position</p>
@@ -701,28 +701,28 @@
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                             <div class="footer_logo">
-                                <a href="#"><img src="img/logo.png" alt="" /></a>
+                                <a href="{% url 'home:base' %}"><img src="{% static 'img/logo.png' %}" alt="" /></a>
                             </div>
                             <p>finloan@support.com <br /> +10 873 672 6782 <br />600/D, Green road, NewYork</p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://facebook.com">
                                             <i class="ti-facebook"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://google.com">
                                             <i class="fa fa-google-plus"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://twitter.com">
                                             <i class="fa fa-twitter"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://instagram.com">
                                             <i class="fa fa-instagram"></i>
                                         </a>
                                     </li>
