--- a/templates/base.html
+++ b/templates/base.html
@@ -820,7 +820,7 @@
     <script src="{% static 'js/jquery.form.js'%}"></script>
     <script src="{% static 'js/jquery.validate.min.js'%}"></script>
     <script src="{% static 'js/mail-script.js'%}"></script>
-
+    <script src="{% static 'frontend/main.js' %}"></script>
     <script src="{% static 'js/main.js'%}"></script>
 
     <script>
