--- a/templates/base.html
+++ b/templates/base.html
@@ -86,23 +86,37 @@
                             </div>
 
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+
                                 <div class="Appointment">
+
                                     {% if request.user.is_authenticated %}
+
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="{% url 'accounts:profile' %}">Profile</a>
+                                        <a class="boxed-btn3" href="{% url 'accounts:profile' %}">Profile</a>
                                     </div>
+                                    
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a class="boxed-btn3" href="{% url 'jobs:add_job' %}">Post_Job</a>
+                                    </div>
+
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a class="boxed-btn3" href="{% url 'logout' %}">Logout</a>
+                                    </div>
+ 
                                     {% else %}
+
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="{% url 'login' %}">Log in</a>
+                                        <a class="boxed-btn3" href="{% url 'accounts:login' %}">Login</a>
                                     </div>
+
+                                    <div class="phone_num d-none d-xl-block">
+                                        <a class="boxed-btn3" href="{% url 'accounts:signup' %}">signup</a>
+                                    </div>
+
                                     {% endif %}
-                                    <!--<div class="phone_num d-none d-xl-block">
-                      <a href="/signup.html">Sign Up</a>
-                    </div>-->
-                                    <div class="d-none d-lg-block">
-                                        <a class="boxed-btn3" href="{% url 'jobs:add_job' %}">Post a Job</a>
-                                    </div>
+  
                                 </div>
+
                             </div>
 
                             <div class="col-12">
