--- a/templates/base.html
+++ b/templates/base.html
@@ -62,21 +62,21 @@
                                             <li>
                                                 <a href="{% url 'jobs:job_list' %}">Browse Job</a>
                                             </li>
-                                            <!--<li>
+                                            {% comment %} <li>
                           <a href="#">pages <i class="ti-angle-down"></i></a>
                           <ul class="submenu">
                             <li><a href="candidate.html">Candidates</a></li>
                             <li><a href="job_details.html">job details</a></li>
                             <li><a href="elements.html">elements</a></li>
                           </ul>
-                        </li>-->
-                                            <!--<li>
+                        </li>
+                                            <li>
                           <a href="#">blog <i class="ti-angle-down"></i></a>
                           <ul class="submenu">
                             <li><a href="blog.html">blog</a></li>
                             <li><a href="single-blog.html">single-blog</a></li>
                           </ul>
-                        </li>-->
+                        </li> {% endcomment %}
                                             <li>
                                                 <a href="{% url 'contact:contact' %}">Contact</a>
                                             </li>
