--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 {% load bootstrap4 %}
 <!DOCTYPE html>
 <html class="no-js" lang="zxx">
+    
+
 
 <head>
     <meta charset="utf-8" />
@@ -10,8 +12,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- <link rel="manifest" href="site.webmanifest"> --> 
+    <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon"  href="{% static 'img/candiateds/8.png' %}" alt="Header Pic"/>
+    {% comment %} <img src="{% static 'img/logo.png' %}" alt="Logo"> {% endcomment %}
+
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -27,6 +31,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.min.css'%}" />
     <link rel="stylesheet" href="{% static 'css/slicknav.css'%}" />
     <link rel="stylesheet" href="{% static 'css/style.css'%}" />
+
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -825,7 +830,7 @@
     <script src="{% static 'js/jquery.slicknav.min.js'%}"></script>
     <script src="{% static 'js/jquery.magnific-popup.min.js'%}"></script>
     <script src="{% static 'js/plugins.js'%}"></script>
-    <!-- <script src="{% static 'js/gijgo.min.js'%}"></script> -->
+    <script src="{% static 'js/gijgo.min.js'%}"></script>
     <script src="{% static 'js/range.js'%}"></script>
 
     <!--contact js-->
