--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
                                     </div>
                                     
                                     <div class="phone_num d-none d-xl-block">
-                                        <a class="boxed-btn3" href="{% url 'jobs:add_job' %}">Post_Job</a>
+                                        <a class="boxed-btn3" href="{% url 'jobs:add_job' %}">Add_Job</a>
                                     </div>
 
                                     <div class="phone_num d-none d-xl-block">
