--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {%block body%}
 
 <!-- bradcam_area  -->
@@ -33,13 +33,12 @@
             </ul>
           </div>
           <div class="p-3">
-            <a  class="boxed-btn3 w-100" href="{% url 'accounts:profile_edit'  %}">Edit Profile</a>
+            <a class="boxed-btn3 w-100" href="{% url 'profile_edit' %}">Edit Profile</a>
           </div>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 {%endblock body%}
-
