--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
 
         <link rel="manifest" href="site.webmanifest">
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/candiateds/6.png' %}" alt="Header Pic" />
-        {% comment %} <img src="{% static 'img/logo.png' %}" alt="Logo"> {% endcomment %}
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/bg_1.ico' %}" alt="" />
+
+        <img src="{% static 'img/logo.png' %}" alt="Logo">
 
         <!-- Place favicon.ico in the root directory -->
 
