--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,7 @@
 {% load bootstrap4 %}
 <!DOCTYPE html>
 <html class="no-js" lang="zxx">
-
-
-
+    
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -13,10 +11,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="manifest" href="site.webmanifest">
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/candiateds/6.png' %}" alt="Header Pic" />
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/bg_1.ico' %}" alt="" />
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/svg_icon/1.svg' %}" alt="" />
 
-        <img src="{% static 'img/logo.png' %}" alt="Logo">
 
         <!-- Place favicon.ico in the root directory -->
 
@@ -146,7 +142,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-7 col-md-6">
                             <div class="slider_text">
-                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">100+ Jobs listed
+                                <h5 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">1000+ Jobs listed
                                 </h5>
                                 <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Find your Dream
                                     Job
