--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
         <link rel="stylesheet" href="{% static 'css/style.css'%}" />
 
         <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+
+        {% comment %} Google adsense {% endcomment %}
+        <meta name="google-adsense-account" content="ca-pub-7725814438788612">
     </head>
 
     <body>
