--- a/templates/base.html
+++ b/templates/base.html
@@ -865,6 +865,26 @@
                 );
             });
         </script>
+
+
+        {% comment %} google ads {% endcomment %}
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7725814438788612"
+            crossorigin="anonymous">
+        </script>
+        <!-- Ads Size -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-7725814438788612"
+            data-ad-slot="8093205253"
+            data-ad-format="auto"
+            data-full-width-responsive="true">
+        </ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+
     </body>
 
 </html>
