update add ads to the project

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,27 @@
         <a href="https://browsehappy.com/">upgrade your browser</a> to improve
         your experience and security.
       </p>
-    <![endif]-->
+        <![endif]-->
 
         <!-- header-start -->
+
+        {% comment %} google ads {% endcomment %}
+
+
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7725814438788612"
+            crossorigin="anonymous">
+        </script>
+        <!-- Ads Size -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7725814438788612"
+            data-ad-slot="8093205253" data-ad-format="auto" data-full-width-responsive="true">
+        </ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+
+
         <header>
             <div class="header-area">
                 <div id="sticky-header" class="main-header-area">
@@ -168,7 +186,7 @@
         <!-- slider_area_end -->
 
         <!-- catagory_area 
-    <div class="catagory_area">
+        <div class="catagory_area">
         <div class="container">
             <div class="row cat_search">
                 <div class="col-lg-3 col-md-4">
@@ -219,8 +237,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    / catagory_area -->
+        </div>
+        / catagory_area -->
 
         <!-- popular_catagory_area_start  -->
         <div class="popular_catagory_area">
@@ -788,29 +806,9 @@
                 </div>
             </div>
 
-            <!-- <div class="copy-right_text wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".3s">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            !-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -
-                            Copyright &copy;
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>
-                            All rights reserved | This template is made with
-                            <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                            <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            !-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-            -->
         </footer>
-        <!--/ footer end  -->
+
+
 
         <!-- link that opens popup -->
         <!-- JS here -->
@@ -867,27 +865,6 @@
         </script>
 
 
-        {% comment %} google ads {% endcomment %}
-
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7725814438788612"
-            crossorigin="anonymous">
-        </script>
-        <!-- Ads Size -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-7725814438788612"
-            data-ad-slot="8093205253"
-            data-ad-format="auto"
-            data-full-width-responsive="true">
-        </ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-
-
     </body>
 
 </html>
-
-
-
